--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,34 +1,42 @@
 <div class="mat-elevation-z8">
-  <app-task-add (AddTaskEvent)="TaskAdded($event)"></app-task-add>
-  <table mat-table [dataSource]="dataSource">
+  <div class="form-group">
+    <app-task-add (AddTaskEvent)="TaskAdded($event)"></app-task-add>
+  </div>
+
+  <div class="form-group">
+    <mat-form-field>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
+  </div>
+  <table mat-table [dataSource]="dataSource" matSort>
 
     <!-- Position Column -->
     <ng-container matColumnDef="_id">
-      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
       <td mat-cell *matCellDef="let element"> {{element._id}} </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let element"> {{element.title}} </td>
     </ng-container>
 
     <!-- Weight Column -->
     <ng-container matColumnDef="isCompleted">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
       <td mat-cell *matCellDef="let element">
         <mat-slide-toggle (change)="updateTask(element)" [checked]="element.isCompleted">{{element.isCompleted}}</mat-slide-toggle>
       </td>
     </ng-container>
     <!-- Symbol Column -->
     <ng-container matColumnDef="created_at">
-      <th mat-header-cell *matHeaderCellDef> Created </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Created </th>
       <td mat-cell *matCellDef="let element"> {{element.created_at | date}} </td>
     </ng-container>
     <!-- Symbol Column -->
     <ng-container matColumnDef="updated_at">
-      <th mat-header-cell *matHeaderCellDef> Updated</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Updated</th>
       <td mat-cell *matCellDef="let element"> {{element.updated_at | date}} </td>
     </ng-container>
     <ng-container matColumnDef="action">
