--- a/src/app/tasks/task.modal.component.html
+++ b/src/app/tasks/task.modal.component.html
@@ -2,8 +2,8 @@
 <div mat-dialog-content>
   <p>Add Title of your Task</p>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.title" name="title" #title="ngModel" placeholder="Enter Your Title"
-      cdkFocusInitial>
+    <input matInput [(ngModel)]="data.title" name="title" #title="ngModel" placeholder="Enter Your Title" required
+      minlength="5" cdkFocusInitial>
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
